# ladybug

./: .gitignore  README.md  dev.sh  docker-compose.yml  manage.py  poetry.toml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: .env  dev.Dockerfile
coccinella/: admin.py  apps.py  models.py
coccinella/management/commands/: generate_data.py
coccinella/migrations/: 0001_initial.py
ladybug/: asgi.py  settings.py  urls.py  wsgi.py
ladybug/Templates/: tela_inicial.html
